//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  firstName String [not null]
  lastName String [not null]
  password String [not null]
  pools Pool [not null]
  poolMembers PoolMember [not null]
  contributions Contribution [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  sessions Session [not null]
  isVerified Boolean [not null, default: false]
  emailVerification EmailVerification [not null]
}

Table EmailVerification {
  id String [pk]
  userId Int [not null]
  user User [not null]
  verificationToken String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
}

Table Session {
  id String [pk]
  userId String [not null]
  expiresAt DateTime [not null]
  user User [not null]
}

Table Pool {
  id Int [pk, increment]
  name String [not null]
  description String
  creatorId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  creator User [not null]
  members PoolMember [not null]
  contributions Contribution [not null]
}

Table PoolMember {
  id Int [pk, increment]
  poolId Int [not null]
  userId Int [not null]
  isManager Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  pool Pool [not null]
  user User [not null]
}

Table Contribution {
  id Int [pk, increment]
  poolId Int [not null]
  userId Int [not null]
  amount Float [not null]
  contributionDate DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  pool Pool [not null]
  user User [not null]
}

Ref: EmailVerification.userId > User.id

Ref: Session.userId > User.email [delete: Cascade]

Ref: Pool.creatorId > User.id

Ref: PoolMember.poolId > Pool.id

Ref: PoolMember.userId > User.id

Ref: Contribution.poolId > Pool.id

Ref: Contribution.userId > User.id